--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "color-namer": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
